--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+
+<h3> Comments (<%= @article.comments.size %>) </h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form' %>
+
 <%= link_to "BACK",articles_path %>
 <p>
 	<%= link_to "DELETE",article_path(@article),method: :delete,data: {confirm: "Really delete the article?"} %>	
